Add legal pages and compliance information for Stripe verification

--- a/index.html
+++ b/index.html
@@ -326,6 +326,9 @@
         <div class="container">
             <h1>LandGo Travel</h1>
             <p>Premium travel booking technology platform with integrated flight and hotel reservation services. Experience seamless travel planning with our advanced mobile application.</p>
+            <div style="background: rgba(255,193,7,0.2); padding: 15px; border-radius: 10px; margin: 20px auto; max-width: 600px; border: 2px solid rgba(255,193,7,0.5);">
+                <p style="margin: 0; font-weight: 600;">⚠️ Development Status: Platform Currently in Active Development</p>
+            </div>
             <a href="#features" class="cta-button">Explore Our Platform</a>
         </div>
     </section>
@@ -373,15 +376,16 @@
             <div class="about-content">
                 <div>
                     <h2>About LandGo Travel</h2>
-                    <p>LandGo Travel is a leading mobile application development platform specializing in travel booking technology solutions. We provide comprehensive travel reservation services through our integrated mobile and web applications.</p>
+                    <p>LandGo Travel is a mobile application development platform specializing in travel booking technology solutions. We provide comprehensive travel reservation services through our integrated mobile and web applications.</p>
                     <p>Our platform connects users with official travel data providers to deliver real-time booking information, competitive pricing, and seamless reservation experiences across multiple travel services.</p>
+                    <p><strong>Important Compliance Notice:</strong> LandGo Travel strictly complies with all U.S. sanctions and international regulations. We do not provide services to or accept bookings for destinations in jurisdictions subject to sanctions, including Cuba, Iran, North Korea, Syria, and the Crimea, Donetsk, and Luhansk regions.</p>
                     <ul>
-                        <li>Over 10 years of travel technology experience</li>
-                        <li>Integrated with major travel data providers</li>
+                        <li>Technology platform for travel booking services</li>
+                        <li>Integrated with authorized travel data providers (Duffel API)</li>
                         <li>Secure payment processing with Stripe</li>
                         <li>Mobile-first design and development</li>
-                        <li>24/7 customer support and technical assistance</li>
-                        <li>Compliant with international travel regulations</li>
+                        <li>Full compliance with U.S. sanctions and international regulations</li>
+                        <li>Based in Florida, United States</li>
                     </ul>
                 </div>
                 <div>
@@ -406,16 +410,16 @@
             <p>Get in touch with our team for business inquiries, technical support, or partnership opportunities.</p>
             <div class="contact-info">
                 <div class="contact-item">
+                    <h3>Company Address</h3>
+                    <p>14703 Southern Blvd<br>Loxahatchee, FL 33470<br>West Palm Beach, Florida<br>United States</p>
+                </div>
+                <div class="contact-item">
                     <h3>Business Inquiries</h3>
                     <p>contact@landgotravel.com</p>
                 </div>
                 <div class="contact-item">
                     <h3>Technical Support</h3>
                     <p>support@landgotravel.com</p>
-                </div>
-                <div class="contact-item">
-                    <h3>Partnership Opportunities</h3>
-                    <p>partners@landgotravel.com</p>
                 </div>
             </div>
         </div>
@@ -426,9 +430,9 @@
             <div class="footer-content">
                 <p>&copy; 2024 LandGo Travel. All rights reserved.</p>
                 <ul class="footer-links">
-                    <li><a href="#privacy">Privacy Policy</a></li>
-                    <li><a href="#terms">Terms of Service</a></li>
-                    <li><a href="#security">Security</a></li>
+                    <li><a href="privacy.html">Privacy Policy</a></li>
+                    <li><a href="terms.html">Terms of Service</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -458,6 +462,6 @@
                 header.style.background = 'rgba(255, 255, 255, 0.95)';
             }
         });
-    </script>
+  </script>
 </body>
 </html>
